--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "knex": "^0.15.2",
+    "pg": "^7.6.1",
+    "postgresql": "0.0.1",
+    "psql": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
